# tfpytest

./: README.md  pyproject.toml
src/terratesting/: __init__.py  terraform.py
src/terratesting/classes/: __init__.py  base.py  defaults.py  exceptions.py  state.py  workspace.py
src/terratesting/utils/: colors.py  logger.py  utils.py
tests/: test_terraform.py
tests/py/: test.py
