[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terratesting"
dynamic = ["version"]
dependencies = []
authors = [{ name = "nerdtronik", email = "nerdtronikpay@gmail.com" }]
description = "A Terraform testing framework for CI/CD pipelines"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: Implementation",
  "Topic :: Terminals",
  "Topic :: Utilities",
]
keywords=["terraform","ci/cd","cicd","ci-cd","terraform-py","terratesting","opentofu","infrastructure-as-code","iac"]

[project.urls]
Repository = "https://github.com/nerdtronik/terratesting"

# [tool.setuptools]
# packages = ["terraform_py", "terraform_py.utils", "terraform_py.classes"]


[tool.hatch.version]
path = "./version"
pattern = "(?P<version>[^']+)"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/terratesting"]
